--- a/index.html
+++ b/index.html
@@ -142,6 +142,24 @@
                         <h3>Poject 01</h3>
                     </div>
                 </div>
+
+                <div class="container-project-box">
+                    <div class="container-project-img">
+                        <img src="https://picsum.photos/id/684/600/400" alt="">
+                    </div>
+                    <div class="container-project-texte">
+                        <h3>Poject 01</h3>
+                    </div>
+                </div>
+
+                <div class="container-project-box">
+                    <div class="container-project-img">
+                        <img src="https://picsum.photos/id/684/600/400" alt="">
+                    </div>
+                    <div class="container-project-texte">
+                        <h3>Poject 01</h3>
+                    </div>
+                </div>
             </div>
          </section>   
  </main>
